<resources>
    <string name="app_name">GoldenSpiral</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_title">evayadesk</string>
    <string name="slogan">TURN MY CUSTOMERS TO FANS</string>
    <string name="skip">SKIP</string>
    <string name="company_name">Company Name</string>
    <string name="plan">Plan</string>
    <string name="Admin_name">Admin Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="Password">Password</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="pass_phrase">Pass Phrase</string>
    <string name="accept">Accept terms and conditions</string>
    <string name="create_my_desk">Create My Desk</string>
    <string name="price">Price</string>
    <string name="contact">Contact</string>
    <string name="value">Value</string>
    <string name="company_key">Company Key</string>
    <string name="role">Role</string>
    <string name="agent">Agent</string>
    <string name="admin">Admin</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="contact_us">Contact Us</string>
    <string name="blog">Blog</string>
    <string name="sign_up">Sign Up</string>

    <string name="screen_one_title">Eva Desk</string>
    <string name="screen_two_title">TURN MY CUSTOMERS TO FANS</string>
    <string name="screen_three_title">Customer support right on business application</string>
    <string name="screen_four_title">media</string>


    <string name="screen_one_subtitle">Subtitle1</string>
    <string name="screen_two_subtitle">Subtitle2</string>
    <string name="screen_three_subtitle">Subtitle3</string>
    <string name="screen_four_subtitle">Subtitle4</string>
    <string name="get_started">let\'s get started</string>




    <string name="home">Home</string>


</resources>
