<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@android:color/holo_green_dark">

    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

        <india.eva.com.goldenspiral.ui.customui.TypefacedTextView
                android:id="@+id/company_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:layout_marginTop="@dimen/margin_100dp"
                android:layout_marginLeft="@dimen/margin_20dp"
                />

        <india.eva.com.goldenspiral.ui.customui.TypefacedTextView
                android:id="@+id/plan_tv"
                android:layout_below="@id/company_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginLeft="@dimen/margin_20dp"
                />

        <india.eva.com.goldenspiral.ui.customui.TypefacedTextView
                android:id="@+id/admin_tv"
                android:layout_below="@id/plan_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Admin_name"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginLeft="@dimen/margin_20dp"
                />

        <india.eva.com.goldenspiral.ui.customui.TypefacedTextView
                android:id="@+id/email_tv"
                android:layout_below="@id/admin_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginLeft="@dimen/margin_20dp"
                />

        <india.eva.com.goldenspiral.ui.customui.TypefacedTextView
                android:id="@+id/phone_tv"
                android:layout_below="@id/email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginLeft="@dimen/margin_20dp"
                />

        <india.eva.com.goldenspiral.ui.customui.TypefacedTextView
                android:id="@+id/password_tv"
                android:layout_below="@id/phone_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Password"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginLeft="@dimen/margin_20dp"

                />

        <india.eva.com.goldenspiral.ui.customui.TypefacedTextView
                android:id="@+id/confirm_pass_tv"
                android:layout_below="@id/password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Confirm_password"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginLeft="@dimen/margin_20dp"
                />

        <india.eva.com.goldenspiral.ui.customui.TypefacedTextView
                android:id="@+id/pass_phrase_tv"
                android:layout_below="@id/confirm_pass_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass_phrase"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginLeft="@dimen/margin_20dp"
                />

        <india.eva.com.goldenspiral.ui.customui.TypefacedTextView
                android:id="@+id/accept_tv"
                android:layout_below="@id/pass_phrase_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginLeft="@dimen/margin_20dp"
                />

        <india.eva.com.goldenspiral.ui.customui.TypefacedButton
        android:id="@+id/create_desk_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accept_tv"
        android:layout_centerHorizontal="true"
        android:text="@string/create_my_desk"
        />

    </RelativeLayout>

</ScrollView>