<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:background="@android:color/holo_green_dark">
    <RelativeLayout

              android:layout_width="match_parent"
              android:layout_height="match_parent"
              >

        <india.eva.com.goldenspiral.ui.customui.TypefacedEditText
        android:id="@+id/company_key_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company_key"
        android:layout_marginTop="@dimen/margin_100dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"/>


        <india.eva.com.goldenspiral.ui.customui.TypefacedEditText
                android:id="@+id/email_tv"
                android:layout_below="@id/company_key_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginRight="@dimen/margin_20dp"/>


        <india.eva.com.goldenspiral.ui.customui.TypefacedEditText
                android:id="@+id/password_tv"
                android:layout_below="@id/email_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginRight="@dimen/margin_20dp"/>


        <india.eva.com.goldenspiral.ui.customui.TypefacedEditText
                android:id="@+id/role_tv"
                android:layout_below="@id/password_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/role"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginRight="@dimen/margin_20dp"/>

        <india.eva.com.goldenspiral.ui.customui.TypefacedButton
                android:id="@+id/login_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/role_tv"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="@dimen/margin_20dp"
                android:text="@string/login"
                />
        <india.eva.com.goldenspiral.ui.customui.TypefacedTextView
                android:id="@+id/forgot_pass_tv"
                android:layout_below="@id/login_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginLeft="@dimen/margin_20dp"/>
        <india.eva.com.goldenspiral.ui.customui.TypefacedTextView
                android:layout_toRightOf="@id/forgot_pass_tv"
                android:layout_below="@id/login_bt"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/margin_40dp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"/>

    </RelativeLayout>
</ScrollView>