<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@android:color/holo_green_dark">
    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
        <india.eva.com.goldenspiral.ui.customui.TypefacedTextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginTop="@dimen/margin_100dp"/>
        <india.eva.com.goldenspiral.ui.customui.TypefacedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email_tv"
                android:layout_below="@id/name_tv"
                android:text="@string/email"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginTop="@dimen/margin_20dp"
                />
        <india.eva.com.goldenspiral.ui.customui.TypefacedTextView
                android:id="@+id/phone_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_tv"
                android:text="@string/phone"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginTop="@dimen/margin_20dp"
                />

        <india.eva.com.goldenspiral.ui.customui.TypefacedTextView
                android:id="@+id/message_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_tv"
                android:text="@string/message"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginTop="@dimen/margin_20dp"
                />
        <india.eva.com.goldenspiral.ui.customui.TypefacedButton
                android:id="@+id/contact_us_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/message_tv"
                android:layout_centerVertical="true"
                android:text="@string/contact_us"/>

    </RelativeLayout>



</ScrollView>